--- a/Exercise1/exercise1.ipynb
+++ b/Exercise1/exercise1.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In this exercise, you will implement linear regression and get to see it work on data. Before starting on this programming exercise, we strongly recommend watching the video lectures and completing the review questions for the associated topics.\n",
     "\n",
-    "All the information you need for solving this assignment is in this notebook, and all the code you will be implementing will take place within this notebook. The assignment can be promptly submitted to the coursera grader directly from this notebook (code and instructions are included below).\n",
+    "All the information you need for solving this assignment is in this notebook, and all the code you will be implementing will take place within this notebook. The assignment can be promptly submitted to the coursera #grader directly from this notebook (code and instructions are included below).\n",
     "\n",
     "Before we begin with the exercises, we need to import all libraries required for this programming exercise. Throughout the course, we will be using [`numpy`](http://www.numpy.org/) for all arrays and matrix operations, and [`matplotlib`](https://matplotlib.org/) for plotting.\n",
     "\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,6 @@
     "from matplotlib import pyplot\n",
     "from mpl_toolkits.mplot3d import Axes3D  # needed to plot 3-D surfaces\n",
     "\n",
-    "# library written for this exercise providing additional functions for assignment submission, and others\n",
-    "import utils \n",
-    "\n",
-    "# define the submission/grader object for this exercise\n",
-    "grader = utils.Grader()\n",
-    "\n",
     "# tells matplotlib to embed plots within the notebook\n",
     "%matplotlib inline"
    ]
@@ -49,7 +43,7 @@
    "source": [
     "## Submission and Grading\n",
     "\n",
-    "After completing each part of the assignment, be sure to submit your solutions to the grader.\n",
+    "After completing each part of the assignment, be sure to submit your solutions to the #grader.\n",
     "\n",
     "For this programming exercise, you are only required to complete the first part of the exercise to implement linear regression with one variable. The second part of the exercise, which is optional, covers linear regression with multiple variables. The following is a breakdown of how each part of this exercise is scored.\n",
     "\n",
@@ -74,7 +68,7 @@
     "You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
-    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once. They must also be re-executed everytime the submitted function is updated.\n",
+    "At the end of each section in this notebook, we have a cell which contains code for submitting the solutions thus far to the #grader. Execute the cell to see your score up to the current section. For all your work to be submitted properly, you must execute those cells at least once. They must also be re-executed everytime the submitted function is updated.\n",
     "</div>\n",
     "\n",
     "\n",
@@ -108,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +143,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "warmUpExercise()"
    ]
@@ -162,26 +167,13 @@
    "source": [
     "### 1.1 Submitting solutions\n",
     "\n",
-    "After completing a part of the exercise, you can submit your solutions for grading by first adding the function you modified to the grader object, and then sending your function to Coursera for grading. \n",
+    "After completing a part of the exercise, you can submit your solutions for grading by first adding the function you modified to the #grader object, and then sending your function to Coursera for grading. \n",
     "\n",
-    "The grader will prompt you for your login e-mail and submission token. You can obtain a submission token from the web page for the assignment. You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
+    "The #grader will prompt you for your login e-mail and submission token. You can obtain a submission token from the web page for the assignment. You are allowed to submit your solutions multiple times, and we will take only the highest score into consideration.\n",
     "\n",
     "Execute the next cell to grade your solution to the first part of this exercise.\n",
     "\n",
     "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# appends the implemented function in part 1 to the grader object\n",
-    "grader[1] = warmUpExercise\n",
-    "\n",
-    "# send the added functions to coursera grader for getting a grade on this part\n",
-    "grader.grade()"
    ]
   },
   {
@@ -199,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,23 +444,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions by executing the following cell.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[2] = computeCost\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "<a id=\"section3\"></a>\n",
     "#### 2.2.4 Gradient descent\n",
     "\n",
@@ -637,16 +612,6 @@
    "metadata": {},
    "source": [
     "*You should now submit your solutions by executing the next cell.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[3] = gradientDescent\n",
-    "grader.grade()"
    ]
   },
   {
@@ -849,16 +814,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[4] = featureNormalize\n",
-    "grader.grade()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -955,30 +910,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[5] = computeCostMulti\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"gradientDescentMulti\"></a>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1046,16 +977,6 @@
    "metadata": {},
    "source": [
     "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[6] = gradientDescentMulti\n",
-    "grader.grade()"
    ]
   },
   {
@@ -1237,23 +1158,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*You should now submit your solutions.*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grader[7] = normalEqn\n",
-    "grader.grade()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Optional (ungraded) exercise: Now, once you have found $\\theta$ using this\n",
     "method, use it to make a price prediction for a 1650-square-foot house with\n",
     "3 bedrooms. You should find that gives the same predicted price as the value\n",
@@ -1285,7 +1189,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1299,7 +1203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
